# datadog-monitor-deployer

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: python-to-pypi-rules.mdc
.github/workflows/: ci.yml  publish.yml  sonarcloud.yml  workflow.yml
config/: example.yaml
scripts/: build_and_publish.sh  setup_environment.bat  setup_environment.sh  test_and_lint.sh
src/datadog_monitor_deployer/: __init__.py  cli.py
src/datadog_monitor_deployer/core/: deployer.py  monitor.py
src/datadog_monitor_deployer/schemas/: monitor.py
src/datadog_monitor_deployer/utils/: config.py  logger.py
tests/: conftest.py  test_cli.py  test_config.py  test_config.yaml  test_deployer.py  test_monitor.py
